<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bowling Companion</string>
    <string name="title_activity_league">Select a League</string>
    <string name="title_activity_series">Series</string>
    <string name="title_activity_game">Game Details</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_stats_game">Game Stats</string>
    <string name="title_activity_stats_league">League Stats</string>
    <string name="title_activity_stats_bowler">Bowler Stats</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_add_league">Add League</string>
    <string name="action_add_series">Add Series</string>
    <string name="action_add_bowler">Add Bowler</string>
    <string name="action_bowler_stats">Bowler Stats</string>
    <string name="action_league_stats">League Stats</string>
    <string name="action_game_stats">Game Stats</string>
    <string name="action_game_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_quick_game_button">Start a series with these settings:\nBowler: N/A\nLeague: N/A</string>
    <string name="text_next_frame">Next</string>
    <string name="text_prev_frame">Prev</string>
    <string name="text_foul_button">Foul</string>
    <string name="text_reset_button">Reset</string>
    <string name="text_whatif_button">What if?</string>
    <string name="text_select_bowler">Select a Bowler</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

</resources>
